Fix: cargar inicil prueba tecnica

--- a/spf-msa-personas/src/main/resources/application-development.yml
+++ b/spf-msa-personas/src/main/resources/application-development.yml
@@ -5,7 +5,7 @@ server:
 
 spring:
   r2dbc:
-    url: r2dbc:postgresql://localhost:5432/banco_db
+    url: r2dbc:postgresql://localhost:5432/db_test
     username: postgres
     password: p.123456
     properties:
