--- a/spf-msa-cuentas/src/main/resources/application-development.yml
+++ b/spf-msa-cuentas/src/main/resources/application-development.yml
@@ -6,7 +6,7 @@ server:
 
 spring:
   r2dbc:
-    url: r2dbc:postgresql://localhost:5432/banco_db
+    url: r2dbc:postgresql://localhost:5432/db_test
     username: postgres
     password: p.123456
     properties:
