--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     image: postgres
     restart: always
     environment:
-      POSTGRES_DB: banco_db
+      POSTGRES_DB: db_test
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: p.123456
     ports:
@@ -19,8 +19,8 @@ services:
   pgadmin:
     image: dpage/pgadmin4
     environment:
-      PGADMIN_DEFAULT_EMAIL: admin@pgadmin.com
-      PGADMIN_DEFAULT_PASSWORD: password
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
       PGADMIN_LISTEN_PORT: 80
     ports:
       - 15432:80
@@ -45,6 +45,6 @@ services:
       context: ./spf-msa-cuentas
       dockerfile: Dockerfile
     ports:
-      - "8082:8082"
+      - "8084:8084"
     networks:
       - backend
